<resources>
    <string name="app_name">RSShool2021-Android-task-MusicApp</string>
    <string name="button_next">Next</string>
    <string name="button_pause">Pause</string>
    <string name="button_stop">Stop</string>
    <string name="button_play">Play</string>
    <string name="button_prev">Prev</string>
    <string name="textview_track_info">Track info</string>
    <string name="description_track_image">Track image</string>


    <string name="notification_channel_name">Player controls</string>
</resources>
